--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "meta-generator",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
