--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "meta-generator",
+  "name": "title-meta-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "Template-based content idea generator",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zangetsu13h13-byte/title-meta-generator.git"
-  },
-  "keywords": [],
+  "keywords": [
+    "generator",
+    "seo",
+    "micro-saas"
+  ],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zangetsu13h13-byte/title-meta-generator/issues"
-  },
-  "homepage": "https://github.com/zangetsu13h13-byte/title-meta-generator#readme",
-  }
+  "license": "ISC"
 }
